<resources>
    <string name="app_name">GeoMute</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Ваши места</string>
    <string name="menu_slideshow">О приложении</string>
    <string name="menu_settings">Настройки</string>
    <string name="channel_name">Уведомления отключения звука</string>
    <string name="channel_description">Уведомление отключения звука при нахождение в беззвучной зоне</string>
    
    <string name="version">Версия %1$s</string>
    <string name="coords">%1$.6f, %2$.6f</string>

    <string name="about_app"><b>GeoMute</b> - удобный сервис для управления настройками звука в зависимости от вашей геолокации. \n\n
        Выбирайте необходимые вам области на карте, устанавливайте радиус и наслаждайтесь своевременным отключением звука.
    </string>
    <string name="start_area_title">Выберите место на карте для создания новой области</string>
    <string name="image_description">Image view mute</string>
    <string name="area_title">Title</string>
    <string name="coords_title">Coords</string>
    <string name="zero">0</string>
    <string name="thousand">1000</string>
    <string name="radius_title">Радиус зоны действия</string>
    <string name="edit_image_view_description">Edit image view</string>
    <string name="add">Добавить</string>
    <string name="support_btn_title">Написать разработчику</string>
</resources>