<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
    </group>
    <item android:title="@string/menu_settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/menu_settings">
                </item>
                <item
                    android:id="@+id/nav_info"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_slideshow" />
            </group>
        </menu>
    </item>
</menu>