<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.kodexgroup.geomuteapp.screens.map.MapFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_list"
        android:name="com.kodexgroup.geomuteapp.screens.areaslist.AreasListFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.kodexgroup.geomuteapp.screens.info.InfoFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.kodexgroup.geomuteapp.screens.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>